Try converting number value to Long on attribute update first (before converting to Double)